fixed design create session module

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -16,5 +16,7 @@
     "other": "articles"
   },  
   "login":"login",
-  "logout":"logout"
+  "logout":"logout",
+  "loginLabel":"login",
+  "passwordLabel":"Password"
 }
