--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -18,6 +18,8 @@
     "other": "товара"
   },
   "login":"Вход",
-  "logout":"Выход"
+  "logout":"Выход",
+  "loginLabel":"Логин",
+  "passwordLabel":"Пароль"
 
 }
